# vanipost

./: .env.example  .gitignore  README.md  WARP.md  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.py  test_setup.py
backend/: Dockerfile  run_pipeline.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py  posts.py
backend/app/core/: config.py
backend/app/db/: base.py  database.py
backend/app/models/: post.py
backend/app/schemas/: post.py
backend/news_fetcher/: fetch_news.py
backend/tweet_generator/: generate_tweet.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
scripts/: dev.sh  start-backend.sh  start-frontend.sh
